# lwd-flask-pj

./: .gitignore  Dockerfile  README.md  app.py  changelog.txt  main.py  movies.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: cicd.yaml
templates/: index.html
