[project]
name = "lwd-flask-pj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-sam-cli>=1.144.0",
    "boto3>=1.40.46",
    "flask>=3.1.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.ruff]
exclude = ["tests/*", "docs/*", ".venv/*"]
line-length = 100
indent-width = 4

[tool.ruff.lint]  
select = ["E", "F", "W", "I"]
ignore = ["E501", "I001", "F401", "F541"]

[tool.ruff.format]